hphp/test/zend/good/Zend/tests/anon/014.php
<?php
// anonymous class trait binding
trait TaskTrait {
    function run() {
        return 'Running...';
    }
}
$class = new class() {
  use TaskTrait;
};
var_dump($class->run());
?>
